--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @plugin "daisyui";
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap");
 
 :root {
     --background: #ffffff;
@@ -20,6 +21,22 @@ body {
 
 @layer base {
     html {
-        font-family: system-ui, sans-serif;
+        font-family: "Open Sans", system-ui, sans-serif;
+    }
+    h1 {
+        @apply text-4xl font-semibold text-gray-900;
+        letter-spacing: 0;
+        vertical-align: middle;
+    }
+    h2 {
+        @apply font-sans font-semibold text-[24px] leading-[32px];
+        letter-spacing: 0;
+        vertical-align: middle;
+    }
+
+    h3 {
+        @apply font-sans font-semibold text-[16px] leading-[24px];
+        letter-spacing: 0;
+        vertical-align: middle;
     }
 }
